--- a/foundations/01-css-methods/style.css
+++ b/foundations/01-css-methods/style.css
@@ -1,7 +1,6 @@
 div {
     background-color: red;
-    display: flex;
-    justify-content: center;
+    text-align: center;
     font-size: 32px;
     font-weight: bold;
     color: white;
