--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,11 @@
 .header  {
-  font-family: monospace;
+  font-family: 'Courier New', Courier, monospace;
   background: papayawhip;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 8px;
+  margin: 5px;
 }
 
 .logo {
@@ -9,12 +14,27 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  gap: 15px;
 }
+
+li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 
 a {
   font-size: 22px;
@@ -22,4 +42,14 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+  display: flex;
+  justify-content: space-between;
+}
+
+
+.left-links {
+  display: flex;
+}
+
+.right-links {
 }
