--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -7,11 +7,26 @@ img {
   height: 100px;
 }
 
+.informacion {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+
 .title {
   font-size: 36px;
   font-weight: 900;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
+.frutas {
+  margin: 25px;
+  text-align: center;
+}
 /* do not edit this footer */
 .footer {
   position: fixed;
